--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -25,7 +25,7 @@ String, naming the component, used in debugging messages. If using JSX this is s
 Callback function invoked once immediately before the initial rendering occurs
 ***
 [`componentDidMount`](http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount) :
-Callback function immediately after the initial rendering occurs
+Callback function invoked immediately after the initial rendering occurs
 ***
 [`componentWillReceiveProps`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops) :
 Callback function invoked when a component is receiving new props
@@ -43,33 +43,9 @@ Callback function invoked immediately after the component's updates are flushed 
 Callback function invoked immediately before a component is unmounted from the DOM
 ***
 
-An example of creating a React component with both state and props is shown below.
+An example of creating a React component, using `React.createClass()`, with both state and props is shown below.
 
-```
-var Timer = React.createClass({
-  getInitialState: function() {
-    return {secondsElapsed: Number(this.props.startTime) || 0};
-  },
-  tick: function() {
-    this.setState({secondsElapsed: this.state.secondsElapsed + 1});
-  },
-  componentDidMount: function() {
-    this.interval = setInterval(this.tick, 1000);
-  },
-  componentWillUnmount: function() {
-    clearInterval(this.interval);
-  },
-  render: function() {
-    return (
-      <div>Seconds Elapsed: {this.state.secondsElapsed}</div>
-    );
-  }
-});
-
-ReactDOM.render(<Timer startTime="60" />, app);
-```
-
-
+[source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
 #### Notes
 
