--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -50,4 +50,4 @@ An example of creating a React component, using `React.createClass()`, with both
 #### Notes
 
 * The render method can only return a single child React node.
-*
+* test
