--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -43,7 +43,7 @@ Callback function invoked immediately after the component's updates are flushed 
 Callback function invoked immediately before a component is unmounted from the DOM
 ***
 
-An example of creating a React component, using `React.createClass()`, with both state and props is shown below.
+An example of creating a React component, using `React.createClass()`, with both `state` and `props` is shown below.
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
