--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -1,10 +1,10 @@
 # Creating React Components
 
-A React component that will potentially contain `state` and `props` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are:
+A React component that will potentially contain `state` and `props` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are (aka component specifications) listed below.
 
 [`render`](http://facebook.github.io/react/docs/component-specs.html#render) :
 
-Function that returns React nodes, React Components, or null/false
+A required value, typically a function that returns React nodes, other React components, or null/false
 ***
 [`getInitialState`](http://facebook.github.io/react/docs/component-specs.html#getinitialstate) :
 
@@ -60,11 +60,13 @@ Callback function invoked immediately after the component's updates are flushed 
 Callback function invoked immediately before a component is unmounted from the DOM
 ***
 
-An example of creating a React component, using `React.createClass()`, with both `state` and `props` is shown below. Make sure you digest the code example slow and read the comments.
+An example of creating a React component using `React.createClass()` and a few component configuration values is shown below. Notice that I am using both `state` and `props` in the code example.
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
 #### Notes
 
-* The render method can only return a single child React node.
-* test
+* The `React.createClass()` function is a convenience function that creates component instances (via `new`) for you.
+* The `render()` function should be a pure function. Which means:
+
+>it does not modify component state, it returns the same result each time it's invoked, and it does not read from or write to the DOM or otherwise interact with the browser (e.g., by using `setTimeout`). If you need to interact with the browser, perform your work in `componentDidMount()` or the other lifecycle methods instead. Keeping `render()` pure makes server rendering more practical and makes components easier to think about.
