--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -60,9 +60,11 @@ Callback function invoked immediately after the component's updates are flushed 
 Callback function invoked immediately before a component is unmounted from the DOM
 ***
 
-An example of creating a React component using `React.createClass()` and a few component configuration values is shown below. Notice that I am using both `state` and `props` in the code example.
+A code example of creating a Timer React component using `React.createClass()` and a few component configuration values is shown below.
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
+
+Notice that I am using both `state` and `props` in the code example.
 
 #### Notes
 
