--- a/basic-react-components/4.3.md
+++ b/basic-react-components/4.3.md
@@ -1,4 +1,24 @@
-# Creating React Components
+# Components Return One Branch
 
+The `render` configuration value should return only one React node, which can contained any number of child nodes.
 
-#### Notes
+[source code](https://jsfiddle.net/fv26rjdL/#tabs=js,result,html,resources)
+
+Note that if you want to return nodes on more than one line you will have to surround the returned value in `()`
+
+[source code](https://jsfiddle.net/e2awasnk/#tabs=js,result,html,resources)
+
+An error will occur if more than one starting React node is attempted to be return. The following will result in an error
+
+[source code](https://jsfiddle.net/xe5kkpub/#tabs=js,result,html,resources)
+
+```
+babel.js:62789 Uncaught SyntaxError: embedded: Adjacent JSX elements must be wrapped in an enclosing tag (10:3)
+   8 |     return (
+   9 | 			<span>test</span>
+> 10 | 			<span>test</span>
+     |    ^
+  11 | 	);
+  12 |   }
+  13 | });
+```
