--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -2,69 +2,84 @@
 
 A React component that will potentially contain `state` and `props` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are (aka component specifications) listed below.
 
-[`render`](http://facebook.github.io/react/docs/component-specs.html#render) :
 
-A required value, typically a function that returns React nodes, other React components, or null/false
-***
-[`getInitialState`](http://facebook.github.io/react/docs/component-specs.html#getinitialstate) :
+<table>
+  <tr>
+    <td>[`render`](http://facebook.github.io/react/docs/component-specs.html#render)</td>
+    <td>A required value, typically a function that returns React nodes, other React components, or null/false</td>
+  </tr>
 
-Object containing initial value of `this.state`
-***
-[`getDefaultProps`](http://facebook.github.io/react/docs/component-specs.html#getdefaultprops)
- :
+  <tr>
+    <td>[`getInitialState`](http://facebook.github.io/react/docs/component-specs.html#getinitialstate)</td>
+    <td>Object containing initial value of `this.state`</td>
+  </tr>
 
- Object containing values to be set on `this.props`
-***
-[`propTypes`](http://facebook.github.io/react/docs/component-specs.html#proptypes) :
+  <tr>
+  <td>[`getDefaultProps`](http://facebook.github.io/react/docs/component-specs.html#getdefaultprops)</td>
+  <td> Object containing values to be set on `this.props`</td>
+</tr>
 
-Object containing [validation specifications for props](http://facebook.github.io/react/docs/reusable-components.html#prop-validation)
-***
-[`mixins`](http://facebook.github.io/react/docs/component-specs.html#mixins) :
+<tr>
+  <td>[`propTypes`](http://facebook.github.io/react/docs/component-specs.html#proptypes)</td>
+  <td>Object containing [validation specifications for props](http://facebook.github.io/react/docs/reusable-components.html#prop-validation)</td>
+</tr>
 
-Array of mixins to share among components
-***
-[`statics`](http://facebook.github.io/react/docs/component-specs.html#statics) :
+<tr>
+  <td>[`mixins`](http://facebook.github.io/react/docs/component-specs.html#mixins) </td>
+  <td>Array of mixins to share among components</td>
+</tr>
 
-Object containing static methods
-***
-[`displayName`](http://facebook.github.io/react/docs/component-specs.html#displayname) :
+<tr>
+  <td>[`statics`](http://facebook.github.io/react/docs/component-specs.html#statics) </td>
+  <td>Object containing static methods</td>
+</tr>
 
-String, naming the component, used in debugging messages. If using JSX this is set automatically.
-***
-[`componentWillMount`](http://facebook.github.io/react/docs/component-specs.html#displayname) :
+<tr>
+  <td>[`displayName`](http://facebook.github.io/react/docs/component-specs.html#displayname)</td>
+  <td>String, naming the component, used in debugging messages. If using JSX this is set automatically.</td>
+</tr>
 
-Callback function invoked once immediately before the initial rendering occurs
-***
-[`componentDidMount`](http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount) :
+<tr>
+  <td>[`componentWillMount`](http://facebook.github.io/react/docs/component-specs.html#displayname)</td>
+  <td>Callback function invoked once immediately before the initial rendering occurs</td>
+</tr>
 
-Callback function invoked immediately after the initial rendering occurs
-***
-[`componentWillReceiveProps`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops) :
+<tr>
+  <td>[`componentDidMount`](http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount)</td>
+  <td>Callback function invoked immediately after the initial rendering occurs</td>
+</tr>
 
-Callback function invoked when a component is receiving new props
-***
-[`shouldComponentUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-shouldcomponentupdate) :
+<tr>
+  <td>[`componentWillReceiveProps`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops)</td>
+  <td>Callback function invoked when a component is receiving new props</td>
+</tr>
 
-Callback function invoked before rendering when new props or state are being received
-***
-[`componentWillUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillupdate) :
+<tr>
+  <td>[`shouldComponentUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-shouldcomponentupdate)</td>
+  <td>Callback function invoked before rendering when new props or state are being received</td>
+</tr>
 
-Callback function invoked immediately before rendering when new props or state are being received.
-***
-[`componentDidUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate) :
+<tr>
+  <td>[`componentWillUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillupdate)</td>
+  <td>Callback function invoked immediately before rendering when new props or state are being received.</td>
+</tr>
 
-Callback function invoked immediately after the component's updates are flushed to the DOM
-***
-[`componentWillUnmount`](http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount) :
+<tr>
+  <td>[`componentDidUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate)</td>
+  <td>Callback function invoked immediately after the component's updates are flushed to the DOM</td>
+</tr>
 
-Callback function invoked immediately before a component is unmounted from the DOM
-***
+<tr>
+  <td>[`componentWillUnmount`](http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount)</td>
+  <td>Callback function invoked immediately before a component is unmounted from the DOM</td>
+</tr>
+</table>
 
-A code example of creating a Timer React component using `React.createClass()` and a few component configuration values is shown below.
+A code example of creating a `Timer` React component using `React.createClass()` and a few component configuration values is shown below.
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
-Notice that I am using both `state` and `props` in the code example.
+Notice that I am using both `state` and `props` in the code example and that because `Timer` is capitalized.
 
 #### Notes
 
