--- a/basic-react-components/4.3.md
+++ b/basic-react-components/4.3.md
@@ -1,10 +1,10 @@
-# Components Return One Branch
+# Components Return One Starting Node
 
-The `render` configuration value should return only one React node, which can contained any number of child nodes.
+The `render` configuration value should return only one React node, which can contained any number of child nodes. In the code below the `<reactNode>` is the starting node. In side of this node any number of sibling and child nodes can be returned.
 
 [source code](https://jsfiddle.net/fv26rjdL/#tabs=js,result,html,resources)
 
-Note that if you want to return nodes on more than one line you will have to surround the returned value in `()`
+Note that if you want to return React nodes on more than one line you will have to surround the returned value in `()`
 
 [source code](https://jsfiddle.net/e2awasnk/#tabs=js,result,html,resources)
 
