--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -5,75 +5,76 @@ A React component that will potentially contain `state` and `props` can be creat
 
 <table>
   <tr>
-    <td>[`render`](http://facebook.github.io/react/docs/component-specs.html#render)</td>
+    <td><a href="http://facebook.github.io/react/docs/component-specs.html#render"><code>render</code></a></td>
     <td>A required value, typically a function that returns React nodes, other React components, or null/false</td>
   </tr>
 
   <tr>
-    <td>[`getInitialState`](http://facebook.github.io/react/docs/component-specs.html#getinitialstate)</td>
-    <td>Object containing initial value of `this.state`</td>
+    <td><a href="http://facebook.github.io/react/docs/component-specs.html#getinitialstate"><code>getInitialState</code></a></td>
+    <td>Object containing initial value of <code>this.state</code></td>
   </tr>
 
   <tr>
-  <td>[`getDefaultProps`](http://facebook.github.io/react/docs/component-specs.html#getdefaultprops)</td>
-  <td> Object containing values to be set on `this.props`</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#getdefaultprops"><code>getDefaultProps</code></a></td>
+  <td> Object containing values to be set on <code>this.props</code></td>
 </tr>
 
 <tr>
-  <td>[`propTypes`](http://facebook.github.io/react/docs/component-specs.html#proptypes)</td>
-  <td>Object containing [validation specifications for props](http://facebook.github.io/react/docs/reusable-components.html#prop-validation)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#proptypes"><code>propTypes</code></a></td>
+  <td>Object containing <a href="http://facebook.github.io/react/docs/reusable-components.html#prop-validation">validation specifications for props</a></td>
 </tr>
 
 <tr>
-  <td>[`mixins`](http://facebook.github.io/react/docs/component-specs.html#mixins) </td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#mixins"><code>mixins</code></a> </td>
   <td>Array of mixins to share among components</td>
 </tr>
 
 <tr>
-  <td>[`statics`](http://facebook.github.io/react/docs/component-specs.html#statics) </td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#statics"><code>statics</code></a> </td>
   <td>Object containing static methods</td>
 </tr>
 
 <tr>
-  <td>[`displayName`](http://facebook.github.io/react/docs/component-specs.html#displayname)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#displayname"><code>displayName</code></a></td>
   <td>String, naming the component, used in debugging messages. If using JSX this is set automatically.</td>
 </tr>
 
 <tr>
-  <td>[`componentWillMount`](http://facebook.github.io/react/docs/component-specs.html#displayname)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#displayname"><code>componentWillMount</code></a></td>
   <td>Callback function invoked once immediately before the initial rendering occurs</td>
 </tr>
 
 <tr>
-  <td>[`componentDidMount`](http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount"><code>componentDidMount</code></a></td>
   <td>Callback function invoked immediately after the initial rendering occurs</td>
 </tr>
 
 <tr>
-  <td>[`componentWillReceiveProps`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops"><code>componentWillReceiveProps</code></a></td>
   <td>Callback function invoked when a component is receiving new props</td>
 </tr>
 
 <tr>
-  <td>[`shouldComponentUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-shouldcomponentupdate)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-shouldcomponentupdate"><code>shouldComponentUpdate</code></a></td>
   <td>Callback function invoked before rendering when new props or state are being received</td>
 </tr>
 
 <tr>
-  <td>[`componentWillUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillupdate)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentwillupdate"><code>componentWillUpdate</code></a></td>
   <td>Callback function invoked immediately before rendering when new props or state are being received.</td>
 </tr>
 
 <tr>
-  <td>[`componentDidUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate)</td>
-  <td>Callback function invoked immediately after the component's updates are flushed to the DOM</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate"><code>componentDidUpdate</code></a></td>
+  <td>Callback function invoked immediately after the component&#39;s updates are flushed to the DOM</td>
 </tr>
 
 <tr>
-  <td>[`componentWillUnmount`](http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount)</td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount"><code>componentWillUnmount</code></a></td>
   <td>Callback function invoked immediately before a component is unmounted from the DOM</td>
 </tr>
 </table>
+
 
 A code example of creating a `Timer` React component using `React.createClass()` and a few component configuration values is shown below.
 
