--- a/basic-react-components/4.3.md
+++ b/basic-react-components/4.3.md
@@ -22,3 +22,22 @@ babel.js:62789 Uncaught SyntaxError: embedded: Adjacent JSX elements must be wra
   12 |   }
   13 | });
 ```
+
+Additionally, just like React nodes, if you are returning components only one starting component can be returned.
+
+[source code](https://jsfiddle.net/o0fqta42/#tabs=js,result,html,resources)
+
+If you return two sibling components an error will occur.
+
+[source code](https://jsfiddle.net/3968zzv3/#tabs=js,result,html,resources)
+
+```
+VM7370 babel.js:62789 Uncaught SyntaxError: embedded: Adjacent JSX elements must be wrapped in an enclosing tag (10:2)
+   8 |     return (
+   9 | 		<MyChildComponent/>
+> 10 | 		<AnotherChildComponent/>
+     |   ^
+  11 | 	);
+  12 |   }
+  13 | });
+```
