--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -76,11 +76,11 @@ A React component that will potentially contain `state` and `props` can be creat
 </table>
 
 
-A code example of creating a `Timer` React component using `React.createClass()` and a few component configuration values is shown below.
+The following code is an example of creating a `Timer` React component using `React.createClass()` and a few component configuration. Make sure you read the comments in the code.
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
-Notice that I am using both `state` and `props` in the code example and that because `Timer` is capitalized.
+Notice that I am using both `state` and `props` in the code example and that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component.
 
 #### Notes
 
