--- a/basic-react-components/4.4.md
+++ b/basic-react-components/4.4.md
@@ -1,4 +1,9 @@
-# Creating React Components
+# Creating Stateless Function Components
 
+When a component is purely a result of `props` alone the component can be written as a pure function.
 
-#### Notes
+[source code](https://jsfiddle.net/5nzpxyuu/#tabs=js,result,html,resources)
+
+Stateless function components can't be passed component options (i.e. `render`, `componentWillUnmount`, etc..). However `.propTypes` and `.defaultProps` can be set as properties on the function.
+
+[source code](https://jsfiddle.net/tpvjyp34/#tabs=js,result,html,resources)
