--- a/react-jsx/3.7.md
+++ b/react-jsx/3.7.md
@@ -20,7 +20,7 @@ var reactNodeLi = <li id=""
 
 ReactDOM.render(reactNodeLi, document.getElementById('app1'));
 ```
-The JSX when it is transformed will look like this (note that attributes/props just become arguments to a function): 
+The JSX when it is transformed will look like this (note that attributes/props just become arguments to a function):
 
 ```
 var reactNodeLi = React.createElement(
@@ -52,14 +52,14 @@ When the `reactNodeLi` node is render to the DOM it will look like this:
 You should note the following four things:
 
 1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g. `id=""` becomes `id="true"` and `test` becomes `test="true"`)
-2. The foo attribute, because it was not a stand HTML attribute does become a final HTML attribute, but it is still available on the node from JavaScript (i.e. `this.props.foo`)
+2. The `foo` attribute, because it was not a standard HTML attribute does become a final HTML attribute, but it is still available (i.e. `this.props.foo`)
 3. You can't write inlines styles in JSX. You have to reference an object in scope that contains CSS properties (written as JS properties).
 4. Any JavaScript values can be injected into JSX using `{}` (e.g. `test={text}` and `data-test={tested?'test':'false'}`).
 
 #### Notes
 
 * If an attribute/prop is duplicated the last one defined wins.
-* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a standard HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
 * Omitting the value of an attribute/prop causes JSX to treat it as true (i.e. `<input checked id type="checkbox" />` becomes `<input checked="true" id="true" type="checkbox">`). This will even occur for attributes/props that are not presented in the final HTML due to the fact they are not actual HTML attributes.
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
