--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -1,6 +1,6 @@
 # Creating React Components
 
-A React component that will potentially contain `state` and `props` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are (aka component specifications) listed below.
+A React component that will potentially contain `state` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are (aka component specifications) listed below.
 
 
 <table>
@@ -76,7 +76,7 @@ A React component that will potentially contain `state` and `props` can be creat
 </table>
 
 
-The following code is an example of creating a `Timer` React component using `React.createClass()` and a few component configuration. Make sure you read the comments in the code.
+The following code is an example of creating a `Timer` React component from React nodes using `React.createClass()`. Make sure you read the comments in the code.
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
