--- a/basic-react-components/4.3.md
+++ b/basic-react-components/4.3.md
@@ -1,6 +1,6 @@
 # Components Return One Starting Node
 
-The `render` configuration value should return only one React node, which can contained any number of child nodes. In the code below the `<reactNode>` is the starting node. In side of this node any number of sibling and child nodes can be returned.
+The `render` configuration value defined when creating a component should return only one React node (or, component). This one node/component can contained any number of child nodes. In the code below the `<reactNode>` is the starting node. In side of this node any number of sibling and child nodes can be returned.
 
 [source code](https://jsfiddle.net/fv26rjdL/#tabs=js,result,html,resources)
 
