--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -1,4 +1,4 @@
-# Creating React Components
+# Creating React components
 
 A React component that will potentially contain `state` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are (aka component specifications) listed below.
 
