--- a/basic-react-components/4.4.md
+++ b/basic-react-components/4.4.md
@@ -1,4 +1,4 @@
-# Creating Stateless Function Components
+# Creating stateless function components
 
 When a component is purely a result of `props` alone the component can be written as a pure function.
 
