--- a/react-basic-setup/1.1.md
+++ b/react-basic-setup/1.1.md
@@ -1,6 +1,6 @@
 # Using `react.js` and `react-dom.js` in an HTML page
 
-The `react.js` file is the core file needed to create React elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js` file. The `react-dom.js` file is dependent on the the `react.js` file and must be included after first including the `react.js` file. An example of an HTML document properly including React is shown below.
+The `react.js` file is the core file needed to create React elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js` file. The `react-dom.js` file is dependent of the `react.js` file and must be included after first including the `react.js` file. An example of an HTML document properly including React is shown below.
 
 ```html
 <!DOCTYPE html>
@@ -14,7 +14,7 @@ The `react.js` file is the core file needed to create React elements and write r
 </html>
 ```
 
-With the `react.js` file and `react-dom.js` file loaded into an HTML page it is then possible to create React elements/components and then render them to the DOM. In the HTML below a `HelloMessage` React component is created containing a React `<div>` element that is rendered to the DOM inside of the `<div id="app"></div>` HTML element.
+With the `react.js` file and `react-dom.js` file loaded into an HTML page it is then possible to create React nodes/components and then render them to the DOM. In the HTML below a `HelloMessage` React component is created containing a React `<div>` node that is rendered to the DOM inside of the `<div id="app"></div>` HTML element.
 
 ```html
 <!DOCTYPE html>
