--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -4,7 +4,7 @@ Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX tr
 
 Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write future ES\* code.
 
-In the HTML page below the familiar `HelloMessage` component has been re-written to [take advantage](http://babeljs.io/blog/2015/06/07/react-on-es6-plus/) of [ES6 classes](https://github.com/lukehoban/es6features#classes). So, not only is Babel transforming the JSX syntax, it is also transforming ES6 class syntax to ES5 syntax.
+In the HTML page below the familiar `HelloMessage` component has been re-written to [take advantage](http://babeljs.io/blog/2015/06/07/react-on-es6-plus/) of [ES6 classes](https://github.com/lukehoban/es6features#classes). So, not only is Babel transforming the JSX syntax, it is also transforming ES6 class syntax to ES5 syntax. Which can then be parsed by ES5 browser engines.
 
 ```html
 <!DOCTYPE html>
@@ -92,8 +92,6 @@ var HelloMessage = (function (_React$Component) {
 
 ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
 ```
-
-Which can then be used in ES5 browsers.
 
 Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel 5.8.23 (i.e. [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
 
