--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -1,6 +1,6 @@
 # Using JSX via Babel
 
-The creation of the React `HelloMessage` component and React `<div>` element in the HTML page below was done using the `React.createClass()` and `React.createElement()` functions. This code should look familiar as it is identical to the HTML from the previous section. This HTML will run without errors in ES5 browsers.
+The creation of the React `HelloMessage` component and React `<div>` element node in the HTML page below was done using the `React.createClass()` and `React.createElement()` functions. This code should look familiar as it is identical to the HTML from the previous section. This HTML will run without errors in ES5 browsers.
 
 ```html
 <!DOCTYPE html>
@@ -40,7 +40,7 @@ return <div>Hello {this.props.name}</div>;
 
 And then Babel will convert it back to the code which uses `React.createElement()` so it can be parsed by a JavaScript engine.
 
-Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to the function calls (i.e. `React.createElement`).
+Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to `React.createElement` function calls.
 
 More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional abstraction provided for your convenience when creating React elements and it won't run in ES5 browsers without first being transformed by Babel.
 
@@ -52,7 +52,7 @@ The Babel project unfortunately, as of Babel 6, no longer provides the script fi
 
 ### Using `browser.js` (Babel 5.8.23) to transform JSX in the browser
 
-In the HTML file below the React code we have been working with to create the `HelloMessage` component has been updated to use JSX. The transformation of the code is occurring because we have included the `browser.js` Babel file and given the `<script>` element where our React is defined a `type` attribute of `type="text/babel"`.
+In the HTML file below the React code we have been working with to create the `HelloMessage` component has been updated to use JSX. The transformation of the code is occurring because we have included the `browser.js` Babel file and given the `<script>` element a `type` attribute of `type="text/babel"`.
 
 ```html
 <!DOCTYPE html>
