--- a/basic-react-components/4.1.md
+++ b/basic-react-components/4.1.md
@@ -1,4 +1,4 @@
-# What is a React component
+# What is a React component?
 
 The next section will provide a mental model around the nature of a React component and cover details around specifically creating React components.
 
