--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -1,12 +1,12 @@
 # Creating React components
 
-A React component that will potentially contain `state` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are (aka component specifications) listed below.
+A React component that will potentially contain `state` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are listed below (aka component specifications).
 
 
 <table>
   <tr>
     <td><a href="http://facebook.github.io/react/docs/component-specs.html#render"><code>render</code></a></td>
-    <td>A required value, typically a function that returns React nodes, other React components, or null/false</td>
+    <td>A required value, typically a function that returns React nodes, other React components, or <code>null</code>/<code>false</code></td>
   </tr>
 
   <tr>
@@ -26,7 +26,7 @@ A React component that will potentially contain `state` can be created by callin
 
 <tr>
   <td><a href="http://facebook.github.io/react/docs/component-specs.html#mixins"><code>mixins</code></a> </td>
-  <td>Array of mixins to share among components</td>
+  <td>Array of mixins (object containing methods) that can be <a href="http://facebook.github.io/react/docs/reusable-components.html#mixins">share among components</a></td>
 </tr>
 
 <tr>
@@ -80,10 +80,13 @@ The following code is an example of creating a `Timer` React component from Reac
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
-Notice that I am using both `state` and `props` in the code example and that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component.
+Notice that I am using both `this.state` and `this.props` in the code example and that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component.
+
+Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just take in configuration options available when defining a React component.
 
 #### Notes
 
+* The callback configuration options (`componentWillUnmount`, `componentDidUpdate`, `componentWillUpdate`, `shouldComponentUpdate`, `componentWillReceiveProps`, `componentDidMount`, `componentWillMount`) are also known as "lifecycle methods" because these various methods are executed at specific points in a component's lifecycle.
 * The `React.createClass()` function is a convenience function that creates component instances (via `new`) for you.
 * The `render()` function should be a pure function. Which means:
 
