--- a/basic-react-components/4.3.md
+++ b/basic-react-components/4.3.md
@@ -1,14 +1,14 @@
 # Components return one node/component
 
-The `render` configuration value defined when creating a component should return only one React node (or, component). This one node/component can contained any number of child nodes. In the code below the `<reactNode>` is the starting node. In side of this node any number of sibling and child nodes can be returned.
+The `render` configuration value defined when creating a component should return only one React node (or, component). This one node/component can contained any number of children. In the code below the `<reactNode>` is the starting node. In side of this node any number of sibling and child nodes can be returned.
 
 [source code](https://jsfiddle.net/fv26rjdL/#tabs=js,result,html,resources)
 
-Note that if you want to return React nodes on more than one line you will have to surround the returned value in `()`
+Note that if you want to return React nodes on more than one line (taking advantage of whitespace) you will have to surround the returned value in `()`.
 
 [source code](https://jsfiddle.net/e2awasnk/#tabs=js,result,html,resources)
 
-An error will occur if more than one starting React node is attempted to be return. The following will result in an error
+Additionally, an error will occur if more than one starting React node is attempted to be return. If you think about it, the error occurs because returning two `React.createElement()` functions isn't possible with JavaScript. Thus, the following will result in an error
 
 [source code](https://jsfiddle.net/xe5kkpub/#tabs=js,result,html,resources)
 
@@ -23,11 +23,13 @@ babel.js:62789 Uncaught SyntaxError: embedded: Adjacent JSX elements must be wra
   13 | });
 ```
 
-Additionally, just like React nodes, if you are returning components only one starting component can be returned.
+Often, developers will simply add a wrapping element `<div>` element to avoid this error.
+
+This issue also concerns components. Just like React nodes, if you are returning a component only one starting component can be returned, but that component can have unlimited children.
 
 [source code](https://jsfiddle.net/o0fqta42/#tabs=js,result,html,resources)
 
-If you return two sibling components an error will occur.
+If you return two sibling components, the same error will occur.
 
 [source code](https://jsfiddle.net/3968zzv3/#tabs=js,result,html,resources)
 
