--- a/basic-react-components/4.4.md
+++ b/basic-react-components/4.4.md
@@ -1,8 +1,10 @@
 # Creating stateless function components
 
-When a component is purely a result of `props` alone the component can be written as a pure function.
+When a component is purely a result of `props` alone the component can be written as a pure function avoiding the need to create a React component instance.
 
 [source code](https://jsfiddle.net/5nzpxyuu/#tabs=js,result,html,resources)
+
+This is typically referred to as a stateless function component.
 
 Stateless function components can't be passed component options (i.e. `render`, `componentWillUnmount`, etc..). However `.propTypes` and `.defaultProps` can be set as properties on the function.
 
