--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -86,7 +86,7 @@ Additionally, the value `this` among the configuration options refers to the com
 
 #### Notes
 
-* The callback configuration options (`componentWillUnmount`, `componentDidUpdate`, `componentWillUpdate`, `shouldComponentUpdate`, `componentWillReceiveProps`, `componentDidMount`, `componentWillMount`) are also known as "lifecycle methods" because these various methods are executed at specific points in a component's lifecycle.
+* The component callback configuration options (`componentWillUnmount`, `componentDidUpdate`, `componentWillUpdate`, `shouldComponentUpdate`, `componentWillReceiveProps`, `componentDidMount`, `componentWillMount`) are also known as "lifecycle methods" because these various methods are executed at specific points in a component's lifecycle.
 * The `React.createClass()` function is a convenience function that creates component instances (via `new`) for you.
 * The `render()` function should be a pure function. Which means:
 
