--- a/basic-react-components/4.3.md
+++ b/basic-react-components/4.3.md
@@ -8,7 +8,7 @@ Note that if you want to return React nodes on more than one line (taking advant
 
 [source code](https://jsfiddle.net/e2awasnk/#tabs=js,result,html,resources)
 
-Additionally, an error will occur if more than one starting React node is attempted to be return. If you think about it, the error occurs because returning two `React.createElement()` functions isn't possible with JavaScript. Thus, the following will result in an error
+An error will occur if more than one starting React node is attempted to be return. If you think about it, the error occurs because returning two `React.createElement()` functions isn't possible with JavaScript. Thus, the following will result in an error
 
 [source code](https://jsfiddle.net/xe5kkpub/#tabs=js,result,html,resources)
 
@@ -23,7 +23,7 @@ babel.js:62789 Uncaught SyntaxError: embedded: Adjacent JSX elements must be wra
   13 | });
 ```
 
-Often, developers will simply add a wrapping element `<div>` element to avoid this error.
+Commonly, developers will add a wrapping element `<div>` element to avoid this error.
 
 This issue also concerns components. Just like React nodes, if you are returning a component only one starting component can be returned, but that component can have unlimited children.
 
