--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -77,6 +77,8 @@ In the HTML file below the React code we have been working with to create the `H
 </html>
 ```
 
+Having JSX transformed in the browser, while convenient and easy to setup, isn't ideal because the transformation cost is occurring at runtime. Thus, using browser.js is ***not a production solution***.
+
 You should be aware that the code examples used in this book via JSFiddle will be using the `browser.js` (Babel 5.8.23) to transform JSX into ES5 code. In other words, JSFiddle is pretty much doing what you see in the HTML file above when running React code.
 
 #### Notes
