--- a/react-jsx/3.2.md
+++ b/react-jsx/3.2.md
@@ -43,6 +43,7 @@ Creating React nodes using JSX is as simple as writing HTML like code in your Ja
 * The `for` attribute has to be written `htmlFor`
 * The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
 * All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
+* To represent HTML elements, ensure the HTML tag is lower-cased
 * The following are the HTML attributes that React supports (shown in camel-case):
 
 ```HTML
