--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -82,7 +82,7 @@ The following code is an example of creating a `Timer` React component from Reac
 
 Notice that I am using both `this.state` and `this.props` in the code example and that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component.
 
-Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just take in configuration options available when defining a React component.
+Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just mediate on the configuration options available when defining a React component.
 
 #### Notes
 
