--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -76,9 +76,13 @@ A React component that will potentially contain `state` can be created by callin
 </table>
 
 
-The following code is an example of creating a `Timer` React component from React nodes using `React.createClass()`. Make sure you read the comments in the code.
+The following code is an example of creating a `Timer` React component from React nodes using `React.createClass()`.
+
+Make sure you read the comments in the code.
 
 [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
+
+It might look like a lot of code but all that is going on is passing the createClass function a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
 
 Notice that I am using both `this.state` and `this.props` in the code example and that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component.
 
