--- a/basic-react-components/4.4.md
+++ b/basic-react-components/4.4.md
@@ -8,4 +8,6 @@ This is typically referred to as a stateless function component.
 
 Stateless function components can't be passed component options (i.e. `render`, `componentWillUnmount`, etc..). However `.propTypes` and `.defaultProps` can be set as properties on the function.
 
+The code example below demonstrates a stateless function component making use of `.propTypes` and `.defaultProps`.
+
 [source code](https://jsfiddle.net/tpvjyp34/#tabs=js,result,html,resources)
