--- a/basic-react-components/4.3.md
+++ b/basic-react-components/4.3.md
@@ -8,9 +8,11 @@ Note that if you want to return React nodes on more than one line (taking advant
 
 [source code](https://jsfiddle.net/e2awasnk/#tabs=js,result,html,resources)
 
-An error will occur if more than one starting React node is attempted to be return. If you think about it, the error occurs because returning two `React.createElement()` functions isn't possible with JavaScript. Thus, the following will result in an error
+An error will occur if more than one starting React node is attempted to be return. If you think about it, the error occurs because returning two `React.createElement()` functions isn't possible with JavaScript.
 
 [source code](https://jsfiddle.net/xe5kkpub/#tabs=js,result,html,resources)
+
+Thus, the above code will result in the following error:
 
 ```
 babel.js:62789 Uncaught SyntaxError: embedded: Adjacent JSX elements must be wrapped in an enclosing tag (10:3)
@@ -25,7 +27,7 @@ babel.js:62789 Uncaught SyntaxError: embedded: Adjacent JSX elements must be wra
 
 Commonly, developers will add a wrapping element `<div>` element to avoid this error.
 
-This issue also concerns components. Just like React nodes, if you are returning a component only one starting component can be returned, but that component can have unlimited children.
+This issue also concerns components. Just like React nodes, if you are returning a component, only one starting component can be returned but that component can have unlimited children.
 
 [source code](https://jsfiddle.net/o0fqta42/#tabs=js,result,html,resources)
 
